
2009-03-05  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework file backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework memcached backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework APC backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework variable frontend (backported from FLOW3) (part of #10614)

2009-03-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10599: Set extAdmEnabled=true when enabling frontend editing for extension compatibility

2009-03-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9974: Use PHP built-in gzip/deflate compression in Frontend

2009-03-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9779: t3lib_div::trimExplode limit parameter leads to wrong result with non-empty requirement
	* Fixed bug #10497: Mark t3lib_div::makeInstanceClassName() as deprecated
	* Fixed bug #10581: Use $this->fixedL for list title length

2009-03-03  Michael Stucki  <michael@typo3.org>

	* TEMPORARY (remove when solved): Disable output of deprecation messages until error handling is implemented.

2009-03-03  Benjamin Mack  <benni@typo3.org>

	* Fixed #9783: Updated prototype.js to the latest 1.6.0.3 release (thanks to Steffen Gebert)

2009-03-01  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10528: Wrong content in pagetree frame after page creation in Opera

2009-03-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10535: Call to deprecated fixed_lgd_pre() in class.t3lib_timetrack.php (Thanks to Uschi Renziehausen and Christian Kuhn)

2009-02-28  Benjamin Mack  <benni@typo3.org>

	* Added feature #2859: List view should have 'collapse' / 'expand' functionality for all list types (Thanks to Christian Kuhn)
	* Fixed bug #4367: Reset recs with clear_all should reset as array, not as string (Thanks to Christian Kuhn)

2009-02-27  Jeff Segars  <jeff@webempoweredchurch.org>
